--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ window.onload = function() {
 	
 	map.addIcon(35.943560,　136.188917,　"鯖江駅") 
 	map.addIcon(35.944571,  136.186228,  "Hana道場” ,"icon/megane.png",128)
-        map.on("cick", (e) ⇒　alert(e.latlng))
+        map.on("click", (e) =>　alert(e.latlng))
  
 }
 
