--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ window.onload = function() {
 	map.setZoom(16)
 	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
 	
-	map.addIcon(35.943560,　136.188917,　"鯖江駅") 
-	map.addIcon(35.944571,  136.186228,  "Hana道場" ,"icon/megane.png",128)
+	map.addIcon(36.578044,　136.188917,　"金沢駅") 
+	map.addIcon(36.571651,  136.656148,  "近江町市場" ,"icon/.png",128)
         map.on("click", (e) =>　alert(e.latlng))
  
 }
