--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 window.onload = function() {
 	var map = initMap('mapid')
 	map.setZoom(16)
-	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
+	map.panTo([ 36.578044,　136.188917 ]) // 金沢駅
 	
 	map.addIcon(36.578044,　136.188917,　"金沢駅") 
 	map.addIcon(36.571651,  136.656148,  "近江町市場" ,"icon/fish.png",128)
