--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ window.onload = function() {
 	map.panTo([ 36.578044,　136.188917 ]) // 金沢駅
 	
 	map.addIcon(36.578044,　136.188917,　"金沢駅") 
-	map.addIcon(36.571651,  136.656148,  "近江町市場" ,"icon/hana.png",128)
+	map.addIcon(36.578044,　136.188917,  "hana道場" ,"icon/hana.png",128)
         map.on("click", (e) =>　alert(e.latlng))
  
 }
