--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 window.onload = function() {
 	var map = initMap('mapid')
 	map.setZoom(16)
-	map.panTo([ 36.578044, 136.188917 ]) // 金沢駅
-	
-	map.addIcon(36.578044, 136.188917, "金沢駅") 
+	map.panTo([ 36.578044, 136.188917 ]) // 金沢駅 
+	map.addIcon(36.578044, 136.188917, "金沢駅
 	map.addIcon(36.578044, 136.188917, "hana道場" ,"icon/hana.png",128)
         map.on("click", (e) =>　alert(e.latlng))
  
